# newton-fractals-wasm

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  startup.sh
.cargo/: config
crates/: cargo.toml  setup.sh
crates/newton_core/: Cargo.toml
crates/newton_core/src/: calculate.rs  colors.rs  func.rs  generate.rs  lerp.rs  lib.rs  newton.rs  pixel_data.rs  polynomial.rs  polynomial_term.rs  roots.rs
crates/newton_wasm/: Cargo.toml
crates/newton_wasm/src/: complex.rs  js_imports.rs  lib.rs  pixel_data_buffer.rs  polynomial.rs  render.rs  roots.rs  scale_row.rs  transform.rs
frontend/: .eslintrc.json  .gitignore  less-watcher.config.json  next.config.js  package.json  pnpm-lock.yaml  setup.sh
frontend/src/app/: canvas.tsx  fractal.ts  global.less  layout.tsx  mixins.less  newton.ts  page.module.less  page.tsx  util.ts  valued.ts
frontend/src/app/(components)/: app-props.ts  canvas.tsx  page.module.less  page.tsx  random-formulas.ts  settings.tsx  status.tsx
frontend/src/app/(newton)/: fractal.ts  newton-interface.ts  newton.ts  render-loop.ts  render.ts
frontend/src/app/(newton)/(wrapper)/: consts.ts  rendering.ts  structs.ts  transform.ts  transforms.ts
frontend/src/app/(render)/: data.ts  render-loop.ts  render.ts  state-machine.ts
frontend/src/app/(state-machine)/: data.ts  render.ts  sm-calculate.ts  sm-recolor.ts  state-machine.ts
frontend/src/app/(util)/: animated-canvas.tsx  canvas.tsx  deferred-fn.ts  periodic-fn.ts  transform.ts  util.ts  valued.ts
frontend/src/app/(wasm-wrapper)/: rendering.ts  structs.ts  transform.ts  util.ts  wrapper.ts
src/: config.rs  generate.rs  lib.rs  main.rs  newton.rs  raster.rs  roots.rs
www/: index.html  index.js  package.json  pnpm-lock.yaml  webpack.config.js
