[package]
name = "newtons-method"
version = "0.0.1"
authors = ["John Reynolds <quilan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "newtons-method"
required-features = ["bin-build"]

[features]
default = ["console_error_panic_hook"]
bin-build = ["_raster"]

[dependencies]
num = "0.2.1"
rand = "0.7.3"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
_raster = { version = "0.2", optional = true, package = "raster" }

[dependencies.web-sys]
version = "0.3"
features = [ "console", "Window", "Performance", "PerformanceTiming" ]

[profile.release]
# debug = true
lto = true
