[package]
name = "newton-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "PerformanceTiming",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }
console_error_panic_hook = { version = "0.1.1", optional = true }
console_log = { version = "1.0.0", features = ["color"] }
newton-core = { version = "0.1.0", path = "../newton_core" }
num-complex = "0.4.4"
wasm-bindgen = "0.2"
anyhow = "1.0.75"
log = "0.4.20"
num = "0.2.1"
rand = "0.7.3"
serde-wasm-bindgen = "0.6.1"
serde = { version = "1.0.192", features = ["derive"] }

[profile.release]
# debug = true
lto = true
